fix for navbar icons on mobile

--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -49,7 +49,8 @@
     display: flex;
     position: absolute;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    padding-top: 110px;
     height: 100vh;
     width: 100%;
     top: 0px;
@@ -137,7 +138,7 @@
 }
 
 .icons-navbar {
-  margin-top: 215px;
+  margin-top: 150px;
   display: none;
   a {
     transition: all 0.3s ease;
